# investlink-test

./: .flake8  pyproject.toml
backend/: manage.py
backend/investlink_test/: asgi.py  settings.py  urls.py  wsgi.py
