[tool.poetry]
name = "investlink-test"
version = "0.1.0"
description = "Django DRF app for managing orders via Alpaca API"
authors = ["glmzhn <galymzhan2007@gmail.com>"]
readme = "README.md"
packages = [
  { include = "investlink-test/backend/" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.14"
psycopg2-binary = "^2.9"
celery = "^5.3"
redis = "^5.0"
requests = "^2.31"
python-dotenv = "^1.0"
drf-spectacular = "^0.27" # Swagger OpenAPI

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0"
black = "^24.3"
isort = "^5.13"
pytest = "^8.0"
pytest-django = "^4.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
